kubernetes/labs/CKS/networkpolicy/namespace-by-name.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: by-namesapce-name
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: trade
          podSelector:
            matchLabels:
              role: backend
      ports:
        - protocol: TCP
          port: 3306
